--- a/Film.Data.Xml.XDocument/Film.Data.XmlXDocument.csproj
+++ b/Film.Data.Xml.XDocument/Film.Data.XmlXDocument.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3C7AD68-D0DB-4424-9AA7-355B067D687B}</ProjectGuid>
+    <ProjectGuid>{D12CF00A-FFC8-486B-B029-0C977C5B2573}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Movie.Domain.Models</RootNamespace>
-    <AssemblyName>Movie.Domain.Models</AssemblyName>
+    <RootNamespace>Film.Data.Xml.XDocument</RootNamespace>
+    <AssemblyName>Film.Data.Xml.XDocument</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actor.cs" />
-    <Compile Include="Producer.cs" />
-    <Compile Include="Film.cs" />
+    <Compile Include="XDocumentFilmDateService.cs" />
+    <Compile Include="XDocumentFilmDataGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Film.Data\Film.Data.csproj">
+      <Project>{fece3c0e-d7e4-463a-987d-3a8f2b4ab25e}</Project>
+      <Name>Film.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Movie.Domain.Models\Movie.Domain.Models.csproj">
+      <Project>{b3c7ad68-d0db-4424-9aa7-355b067d687b}</Project>
+      <Name>Movie.Domain.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
