--- a/Film.Data/Film.Data.csproj
+++ b/Film.Data/Film.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3C7AD68-D0DB-4424-9AA7-355B067D687B}</ProjectGuid>
+    <ProjectGuid>{FECE3C0E-D7E4-463A-987D-3A8F2B4AB25E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Movie.Domain.Models</RootNamespace>
-    <AssemblyName>Movie.Domain.Models</AssemblyName>
+    <RootNamespace>Film.Data</RootNamespace>
+    <AssemblyName>Film.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actor.cs" />
-    <Compile Include="Producer.cs" />
-    <Compile Include="Film.cs" />
+    <Compile Include="IFilmDataGateway.cs" />
+    <Compile Include="IFilmDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Movie.Domain.Models\Movie.Domain.Models.csproj">
+      <Project>{b3c7ad68-d0db-4424-9aa7-355b067d687b}</Project>
+      <Name>Movie.Domain.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
