--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -3,6 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="DefaultConnectionToSQLExpress" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Date.SqlClient"/>
+    <add name="DefaultConnectionToSQLServer" connectionString="Driver={SQL Server};Server=(local);Database=FilmLibrary;Trusted_Security=Yes;" providerName="System.Data.Odbc" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
