--- a/Films.Data.SqlServerOdbc/Films.Data.SqlServerSqlClient.csproj
+++ b/Films.Data.SqlServerOdbc/Films.Data.SqlServerSqlClient.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dto2\ActorDto.cs" />
+    <Compile Include="Dto2\FilmDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerSqlClientFilmDataGateway.cs" />
     <Compile Include="SqlServerSqlClientFilmDataService.cs" />
