--- a/Films.Data.SqlServerOdbc/Films.Data.SqlServerOdbc.csproj
+++ b/Films.Data.SqlServerOdbc/Films.Data.SqlServerOdbc.csproj
@@ -40,9 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dto\ActorDto.cs" />
-    <Compile Include="Dto\FilmDto.cs" />
-    <Compile Include="Dto\ProducerDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerOdbcFilmDataGateway.cs" />
     <Compile Include="SqlServerOdbcFilmDataService.cs" />
@@ -61,6 +58,8 @@
       <Name>Films.Domain.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Dto\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
