--- a/Films.Data.SqlServerOdbc/Films.Data.SqlServerOdbc.csproj
+++ b/Films.Data.SqlServerOdbc/Films.Data.SqlServerOdbc.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dto\ActorDto.cs" />
+    <Compile Include="Dto\FilmDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerOdbcFilmDataGateway.cs" />
     <Compile Include="SqlServerOdbcFilmDataService.cs" />
@@ -58,8 +61,6 @@
       <Name>Films.Domain.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dto\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
