--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -3,6 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="DefaultConnectionToSQLExpress" connectionString="Driver={SQL Server};Source=.\SQLEXPRESS;Catalog=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Data.Odbc"/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
