--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="DefaultConnectionToSQLExpress" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Date.Odbc"/>
+    <add name="DefaultConnectionToSQLExpress" connectionString="Driver={SQL Server};Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.Odbc"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
