Fixed adding errors!

--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -5,6 +5,8 @@
     </startup>
   <connectionStrings>
     <add name="DefaultConnectionToSQLExpress" connectionString="Driver={SQL Server};Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.Odbc"/>
+    <add name="DefaultConnectionToSQLServer" connectionString="Driver={SQL Server};Server=(local);Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.Odbc"/>
+
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
