--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="DefaultConnectionToSQLExpress" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Date.SqlClient"/>
-    <add name="DefaultConnectionToSQLServer" connectionString="Driver={SQL Server};Server=(local);Database=FilmLibrary;Trusted_Security=Yes;" providerName="System.Data.Odbc" />
+    <add name="DefaultConnectionToSQLServer" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection=yes" providerName="SQLNCLI" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
