--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="DefaultConnectionToSQLExpress" connectionString="Driver={SQL Server};Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.Odbc"/>
-    <add name="DefaultConnectionToSQLServer" connectionString="Driver={SQL Server};Server=(local);Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.Odbc"/>
+    <add name="DefaultConnectionToSQLExpress" connectionString="Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.SQLNCLI"/>
+    <add name="DefaultConnectionToSQLServer" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.SQLNCLI"/>
 
   </connectionStrings>
   <runtime>
