Installing the Entity Framework in the Wpf assembly and adding another version of the connection string

--- a/Cinema.Presentation.Wpf/App.config
+++ b/Cinema.Presentation.Wpf/App.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="DefaultConnectionToSQLExpress" connectionString="Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.SQLNCLI" />
-    <add name="DefaultConnectionToSQLServer" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Date.SQLNCLI" />
+    <add name="DefaultConnectionToSQLExpress" connectionString="Server=.\SQLExpress;Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Data.SQLNCLI" />
+    <add name="DefaultConnectionToSQLServer" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection = Yes;" providerName="System.Data.SQLNCLI" />
+    <add name="StringConnectionEntityFramework" connectionString="Server=.\SQLEXPRESS;Database=FilmLibraryy;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" />
+    <add name="StringConnectionEntityFramework1" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
