--- a/EntityFramework/App.config
+++ b/EntityFramework/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="StringConnectionEntityFramework" connectionString="Server=.\SQLEXPRESS;Database=FilmLibraryy;Trusted_Connection=Yes;" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+    <add name="StringConnectionEntityFrameworkSqlExperss" connectionString="Server=.\SQLEXPRESS;Database=FilmLibraryy;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" />
+    <add name="StringConnectionEntityFrameworkSqlServer" connectionString="Server=(local);Database=FilmLibrary;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" />  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
