--- a/EntityFramework/Films.Data.EntityFramework.csproj
+++ b/EntityFramework/Films.Data.EntityFramework.csproj
@@ -49,7 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Converters\ConvertActorDomainToActorDataEntityFramework.cs" />
+    <Compile Include="Converters\ConvertFilmDomainToFilmDataEntityFramework.cs" />
+    <Compile Include="Converters\ConvertProducerDomainToProducerDataEntityFramework.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Actor.cs" />
+    <Compile Include="Models\Film.cs" />
+    <Compile Include="Models\Producer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerEntityFrameworkFilmDataGateway.cs" />
     <Compile Include="SqlServerEntityFrameworcFilmDataService.cs" />
